# FlowChain-ICCV2023

./: pyproject.toml
config/TP/FlowChain/CIF_separate_cond_v_trajectron/: cuip_eth_all.yml  cuip_eth_vehicle.yml  cuip_sdd_all.yml  cuip_sdd_vehicle.yml
src/data/: unified_loader.py
src/data/TP/: process_data.py
src/data/TP/raw_data/cuip_eth_vehicle/test/: cuip_eth_vehicle_test.txt
src/data/TP/raw_data/cuip_eth_vehicle/train/: cuip_eth_vehicle_train.txt
src/data/TP/raw_data/cuip_eth_vehicle/val/: cuip_eth_vehicle_val.txt
src/data/TP/raw_data/cuip_sdd_vehicle/: test_trajnet.pkl
src/metrics/: TP_metrics.py
